# xml1

./: Cargo.toml  README.md
benches/: perf.rs
benches/files/: fonts.conf
src/: chars.rs  fallback.rs  lib.rs  sse2.rs  sse2_.rs
