[package]
name = "xml1"
version = "0.2.0"
edition = "2021"
description = "sane, non compliant xml parser without allocations"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/xml1"
repository = "https://github.com/lassade/xml1"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]

[dependencies]
# codespan-reporting = "0.11.1"

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false, features = ["rayon", "cargo_bench_support"] }

[[bench]]
name = "perf"
harness = false